# ngsreads.align.bwa

./: .gitignore  .gitmodules  README.md  setup.cfg  setup.py
include/: zlib.pxd
include/bwalib/: bntseq.pxd  bwa.pxd  bwamem.pxd  bwt.pxd  bwtindex.pxd  kstring.pxd  ksw.pxd  utils.pxd
ngsreads/align/: bwa.pyx
tests/: test.fa  test_index.py
tests/data/: test.fa
